--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ button {
 .slide{
     width: 100%;
     height: 100%;
-    display: none;
+  
 }
 
 .slide img{
@@ -42,6 +42,15 @@ object-fit: cover;
 
 }
 
-.slide.active{
-    display: block;
+.text-slide{
+    position: absolute;
+    bottom:0;
+    width: 100%;
+    height: 80px;
+    background-color: rgba(0, 0, 0, 0.7);
+    
+}
+
+p{
+    font-size: 12px;
 }
